7-Zip-JBinding ChangeLog
========================

Release - 16.02-2.01 (Release, cross-platform, based on zip/p7zip 16.02)

	* Bugfix: Fix crash on read errors caused by wrong throw()
		RAR and maybe other archive formats were affected by the bug.
		Java exception from a data reading method could have caused a JVM crash.

Release - 16.02-2.01 (Release, cross-platform, based on zip/p7zip 16.02)

	* First official stable release

	* Bind 7-Zip 16.02
		- DEB archive renamed to AR supporting archive extension: .ar, .a, .deb, .lib 
		- PropID.LINK renamed to PropID.SYM_LINK
	
	* ARM Builds (WARNING: Not a part of -AllPlatforms or -AllLinux packages!!!)
		* ARMv5 (armel)
		* ARMv6 (RaspberryPi 2)
		* ARMv7 (armhf)
		* ARM64

	* Create password protected archives 
		- Support 7z and zip
		- Encrypted archive items
		- Encrypt archive header (7z only)
		- Create & update tests
		
	* Full RAR5 extraction support (format name: ArchiveFormat.RAR5)
		- password protected archives 
		- archives with encrypted headers
		- archives splitted in volumes
		- 251 new tests

	* Support for NTFS (file system)

	* Support for FAT (file system)

	* Support for HFS (file system)
	  (No only as a subsystem of ISO)

	* Support for SYM_LINK & HARD_LINK properties

	* Improving performance on Window by using GCC 5.3 for Windows builds
	
	* Improve archive type auto-detection (algorithm + performance)

	* Bugfix: Bug #21 (7z-archive in Tar)

	* Bugfix: Bug #18 (null as password causes JVM crash)

	* Complete rewrite of the test framework

	* Drop support for the Mac 32bit and consequently for the AllMac packages
	  (use Mac-x86_64 or AllPlatform instead)

Release - 9.20-2.00beta (Release candidate, cross-platform, based on zip/p7zip 9.20 beta)

	* Bind 7-Zip 9.20 (beta)

	* Create/update archives
		- Supported archives: 7z, BZip2, Tar, Zip, GZip
		- Archive format specific or generic compression APIs
		- JavaDoc + Snippets
		