@@ -7,6 +7,7 @@ PROJECT(SevenZipJBinding)
 # CXX="g++-4.2 -arch i386"
 
 SET(CMAKE_BUILD_TYPE Release CACHE STRING "Build target: Release or Debug")
+OPTION(STATIC_BUILD "links the dynamic library statically. Such library will not require dependencies on dynamic libraries at runtime" TRUE)
 
 SET(MINGW32     No CACHE BOOL "Use MinGW toolchain (32 bit)")
 SET(MINGW64     No CACHE BOOL "Use MinGW toolchain (64 bit)")
